lesson2-hw/k8s-mongo/mongo-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-client
  namespace: secure-app
spec:
  containers:
  - name: mongodb-client
    image: mongo-express:latest
    command: ["sleep"]
    args: ["3600"]
  restartPolicy: Never
