lesson2-hw/k8s-mongo/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: secure-app
spec:
  type: ExternalName
  externalName: mongodb.secure-app.svc.cluster.local
