lesson2-hw/k8s-mongo/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: secure-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      serviceAccountName: app-service-account
      containers:
      - name: mongodb
        image: mongo:latest
        resources:
          requests:
            memory: "16Mi"   # specify the memory request
            cpu: "150m"      # specify the CPU request
          limits:
            memory: "16Mi"  # specify the memory limit
            cpu: "150m"      # specify the CPU limit
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: secure-app
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongodb
